fixed isBlank() Method not working on older Java version Please enter the commit message for your changes. Lines starting